# nex-automat

./: .gitattributes  .gitignore  CLAUDE.md  Dockerfile.nex-brain  Dockerfile.telegram  INIT_PROMPT.md  INIT_PROMPT_ANDROS_DEPLOYMENT.md  INIT_PROMPT_ANDROS_DEPLOYMENT_v2.md  INIT_PROMPT_ANDROS_DEPLOYMENT_v3.md  INIT_PROMPT_ANDROS_DEPLOYMENT_v4.md  INIT_PROMPT_ANDROS_DOCKER_v1.md  INIT_PROMPT_ANDROS_DOCKER_v2.md  INIT_PROMPT_ANDROS_ICC_IMPLEMENTATION.md  INIT_PROMPT_ANDROS_MARSO_CONTINUE.md  INIT_PROMPT_ANDROS_MONITORING.md  INIT_PROMPT_ANDROS_WIREGUARD_v1.md  INIT_PROMPT_CI_CD_PHASE-1.md  INIT_PROMPT_ICC_DEPLOYMENT.md  INIT_PROMPT_INVOICE_SYSTEM.md  INIT_PROMPT_NEW_CHAT.md  INIT_PROMPT_SUPPLIER_INVOICE_WEB_UI.md  PROJECT_MANIFEST.txt  README.md  README.md-old  STATUS.md  cleanup_monorepo.py  docker-compose.runner.yml  e2e_test_workflow.py  generate_project_manifest.py  install_dependencies_pip.py  module_registry.yaml  new_chat.py  pyproject.toml  requirements-rag.txt  ruff.toml  temp_output.txt
SESSION_NOTES/: COLLABORATION_RULES.md-old  INIT_PROMPT_NEW_CHAT.md  MIGRACIA_N8N_TO_TEMPORAL.md-old  PROJECT_MANIFEST.json  SESSION_NOTES.md  SESSION_SUMMARY.md  commit-message.txt  docs.json
apps/: package-lock.json
apps/supplier-invoice-editor/: .gitignore  README.md  cleanup_backups.py  cleanup_project.py  main.py  pyproject.toml  requirements.txt
apps/supplier-invoice-editor/database/: README.md
apps/supplier-invoice-editor/database/schemas/: test_schema.sql
apps/supplier-invoice-editor/docs/: INIT_PROMPT_NEW_CHAT.md  POSTGRESQL_SETUP.md-old  README.md-old  SESSION_NOTES.md  project_file_access.json
apps/supplier-invoice-editor/docs/database/: TYPE_MAPPINGS.md
apps/supplier-invoice-editor/resources/: README.md-old
apps/supplier-invoice-editor/scripts/: apply_xml_import_changes.py  check_database_tables.py  debug_gscat_barcode.py  debug_import_config.py  generate_project_access.py  import_xml_to_staging.py  insert_test_data.py  load_invoice_xml.py  patch_postgres_client.py  replace_import_xml.py  show_table_structure.py  test_barcode_lookup.py  test_pg8000_direct.py  verify_database.py
apps/supplier-invoice-editor/src/: README.md-old  __init__.py  config.py
apps/supplier-invoice-editor/src/btrieve/: __init__.py  btrieve_client.py
apps/supplier-invoice-editor/src/business/: __init__.py  invoice_service.py  invoice_service.py.schema_adapt_backup  invoice_service.py.session4b_backup  nex_lookup_service.py
apps/supplier-invoice-editor/src/database/: __init__.py  postgres_client.py  postgres_client_pg8000.py
apps/supplier-invoice-editor/src/models/: __init__.py  barcode.py  gscat.py  mglst.py  pab.py
apps/supplier-invoice-editor/src/ui/: __init__.py  invoice_detail_window.py  main_window.py
apps/supplier-invoice-editor/src/ui/dialogs/: __init__.py
apps/supplier-invoice-editor/src/ui/widgets/: __init__.py  invoice_items_grid.py  invoice_items_grid.py.backup_init  invoice_items_grid.py.backup_sort  invoice_items_grid.py.backup_sort2  invoice_items_grid.py.before_grid  invoice_list_widget.py  invoice_list_widget.py.backup_active_column  invoice_list_widget.py.backup_init  invoice_list_widget.py.backup_sort  invoice_list_widget.py.backup_sort2  invoice_list_widget.py.before_grid  invoice_list_widget.py.broken  quick_search.py  quick_search.py.backup10  quick_search.py.backup_20251206_190304
apps/supplier-invoice-editor/src/utils/: __init__.py  config.py  constants.py  grid_settings.py  text_utils.py  window_settings.py
apps/supplier-invoice-editor/tests/: README.md-old  conftest.py  test_config.py  test_database.py  test_imports.py  test_main.py
apps/supplier-invoice-loader/: README.md-old  main.py  pyproject.toml  requirements.txt  test_report.html
apps/supplier-invoice-loader/config/: config_template.py
apps/supplier-invoice-loader/database/archive/: 001_initial_schema.sql  002_nex_staging_schema.sql
apps/supplier-invoice-loader/database/migrations/: 003_add_file_tracking_columns.sql
apps/supplier-invoice-loader/database/schemas/: 002_add_nex_columns.sql  README.md
apps/supplier-invoice-loader/deploy/: build_package.py
apps/supplier-invoice-loader/n8n-workflows/: n8n-SupplierInvoiceEmailLoader.json
apps/supplier-invoice-loader/reports/: __init__.py  config.py  daily_summary.py
apps/supplier-invoice-loader/reports/templates/: daily_report.html
apps/supplier-invoice-loader/scripts/: SCHEDULER_README.md  backup_config.py  backup_database.py  backup_wrapper.py  clear_test_data.py  generate_project_access.py  manual_test_batch_extraction.py  manual_test_extraction.py  manual_test_isdoc.py  restore_database.py  run_daily_report.py  service_installer.py  setup_task_scheduler.ps1  test_invoice_integration.py  test_marso_integration.py  verify_installation.py
apps/supplier-invoice-loader/src/api/: models.py  staging_routes.py
apps/supplier-invoice-loader/src/backup/: config_backup.py  database_backup.py  database_restore.py
apps/supplier-invoice-loader/src/business/: isdoc_service.py  product_matcher.py
apps/supplier-invoice-loader/src/database/: database.py
apps/supplier-invoice-loader/src/extractors/: base_extractor.py  generic_extractor.py  ls_extractor.py  marso_extractor.py
apps/supplier-invoice-loader/src/monitoring/: __init__.py  alert_manager.py  health_monitor.py  log_manager.py
apps/supplier-invoice-loader/src/utils/: config.py  env_loader.py  monitoring.py  notifications.py
apps/supplier-invoice-loader/tests/: conftest.py
apps/supplier-invoice-loader/tests/unit/: test_alert_manager.py  test_api.py  test_backup_database.py  test_config.py  test_health_monitor.py  test_import.py  test_log_manager.py  test_monitoring.py  test_notifications.py
config/: config.template.yaml  database.yaml  rag_config.yaml
deploy/: deploy.py
docs/: 00_DOCUMENTATION_INDEX.md  COLLABORATION_RULES.md  DATABASE_SCHEMAS.md  DOCUMENTATION_INDEX.md  GIT_GUIDE.md  HISTORY.md  INIT_PROMPT_NEW_CHAT.md  MIGRATION_SUMMARY.md  PROJECT_ARCHIVE.md  PROJECT_ARCHIVE.md-old  PROJECT_MANIFEST.json  PROJECT_STATUS.md  SESSION_NOTES.md  (+1 more)
e2e/: package.json  (+3 more)
(+1930 files in other folders)
