[project]
name = "nex-automat"
version = "0.1.0"
description = "NEX Genesis Automation Platform - Monorepo"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Zoltán Rausch", email = "rausch@icc.sk"}
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*"
]
