[project]
name = "nex-automat"
version = "0.1.0"
description = "NEX Genesis Automation Platform - Monorepo"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Zoltán Rausch", email = "rausch@icc.sk"}
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[tool.uv.workspace]
members = [
    "apps/*",
    "packages/*"
]

[tool.ruff]
target-version = "py311"
line-length = 120
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]
exclude = ["*.pyi", "__pycache__", ".git", "*.md"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/", "docs/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["packages", "apps"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
fail_under = 50
show_missing = true
