[project]
name = "supplier-invoice-editor"
version = "1.0.0"
description = "GUI approval workflow for supplier invoices before NEX import"
requires-python = ">=3.11"
authors = [
    {name = "Zoltán Rausch", email = "rausch@icc.sk"}
]

dependencies = [
    "invoice-shared",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv.sources]
invoice-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
