[project]
name = "supplier-invoice-editor"
version = "1.0.0"
description = "Qt5 desktop application for ISDOC invoice approval"
requires-python = ">=3.13"
dependencies = [
    "PyQt5>=5.15.11",
    "PyYAML>=6.0.3",
    "asyncpg>=0.29.0",
    "openpyxl>=3.1.0",
    "nexdata",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.5.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "W", "I"]