[project]
name = "supplier-invoice-loader"
version = "2.0.0"
description = "Automated supplier invoice processing - Email to NEX Genesis"
requires-python = ">=3.11"
authors = [
    {name = "Zoltán Rausch", email = "rausch@icc.sk"}
]

dependencies = [
    "invoice-shared",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pypdf>=3.17.0",
    "pillow>=10.1.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]
monitoring = [
    "psutil>=5.9.0",
]

[tool.uv.sources]
invoice-shared = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
